2001-09-29  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprofpp.cpp: bug fix when calling the bfd lib.

2001-09-29  Philippe Elie  <ph_e@club-internet.fr>

	* gui/oprof_start.cpp: two minor fixes.

2001-09-28  John Levon  <moz@compsoc.man.ac.uk>

	* various files: the footer is now a header !

	* dae/opd_start.c: fix msync !!

	* gui/oprof_start.cpp:
	* gui/oprof_start_util.h:
	* gui/oprof_start_util.cpp: better default event count
	  value. Save CPU type to oprofile file.

2001-09-28  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.c: fix op_to_source [-a] [-s]

2001-09-28  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.sgml: oops, correct bad merging with
 	  John's last update.

2001-09-27  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.1.in: minor change
	* op_events.c: remove --gui-description stuff
	* pp/opf_filter.cpp: remove use of temporary array to
	  pass argument to the popt library

2001-09-27  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: updates

	* gui/oprof_start_util.cpp: fix compile, revert
	  g++ extension (different on g++ 3.0) 
 
2001-09-27  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start_util.cpp: use g++ extension to
	  avoid using temporary files
 
2001-09-27  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start_util.cpp: fix crasher bug
 
2001-09-27  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start.h:
	* gui/oprof_start.cpp: get per-counter config working
 
2001-09-27  John Levon  <moz@compsoc.man.ac.uk>

	* pp/Makefile.in:
	* pp/oprofpp.c:
	* pp/oprofpp.cpp: rename file
 
2001-09-27  John Levon  <moz@compsoc.man.ac.uk>

	* pp/opf_container.cpp:
	* pp/oprofpp.h:
	* pp/oprofpp.c: speed improvements
 
2001-09-26  Philippe Elie  <ph_e@club-internet.fr>

	* configure.in: typo

	* pp/oprofpp.c: fix oprofpp -s.
	  Use std::string (work not yet finish)
	* pp/oprofpp.h:	ditto
	* pp/opf_filter.cpp: ditto

2001-09-26  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: add nr_interrupts
 