@@ -1,3 +1,15 @@
+2001-09-29  John Levon  <moz@compsoc.man.ac.uk>
+
+	* TODO: update
+ 
+	* gui/oprof_start.cpp:
+	* gui/ui/oprof_start_base.ui:
+	* gui/oprof_start_config.h:
+	* gui/oprof_start_config.cpp: add verbose option
+ 
+	* pp/opf_container.cpp:
+	* pp/opf_filter.cpp: some FIXMEs and little cleanups
+ 
 2001-09-29  Philippe Elie  <ph_e@club-internet.fr>
 
 	* pp/oprofpp.cpp: bug fix when calling the bfd lib.
